<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:minHeight="@dimen/customNumberKeyboardMinHeight"
    tools:background="@color/colorPrimaryDark">

    <androidx.constraintlayout.helper.widget.Flow
        android:layout_width="0dp"
        android:layout_height="0dp"
        app:constraint_referenced_ids="number1,number2,number3,number4,number5,number6,number7,number8,number9,extraButtonLayout,number0,deleteImage"
        app:flow_horizontalStyle="spread"
        app:flow_maxElementsWrap="3"
        app:flow_wrapMode="aligned"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/number1"
        style="@style/CustomNumberKeyboardTextLight"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:text="@string/customNumberKeyboard1" />

    <TextView
        android:id="@+id/number2"
        style="@style/CustomNumberKeyboardTextLight"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:text="@string/customNumberKeyboard2" />

    <TextView
        android:id="@+id/number3"
        style="@style/CustomNumberKeyboardTextLight"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:text="@string/customNumberKeyboard3" />

    <TextView
        android:id="@+id/number4"
        style="@style/CustomNumberKeyboardTextLight"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:text="@string/customNumberKeyboard4" />

    <TextView
        android:id="@+id/number5"
        style="@style/CustomNumberKeyboardTextLight"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:text="@string/customNumberKeyboard5" />

    <TextView
        android:id="@+id/number6"
        style="@style/CustomNumberKeyboardTextLight"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:text="@string/customNumberKeyboard6" />

    <TextView
        android:id="@+id/number7"
        style="@style/CustomNumberKeyboardTextLight"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:text="@string/customNumberKeyboard7" />

    <TextView
        android:id="@+id/number8"
        style="@style/CustomNumberKeyboardTextLight"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:text="@string/customNumberKeyboard8" />

    <TextView
        android:id="@+id/number9"
        style="@style/CustomNumberKeyboardTextLight"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:text="@string/customNumberKeyboard9" />

    <FrameLayout
        android:id="@+id/extraButtonLayout"
        android:layout_width="0dp"
        android:layout_height="0dp">

        <ImageView
            android:id="@+id/extraButtonImage"
            style="@style/CustomNumberKeyboardExtraButtonImage"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:visibility="gone"
            tools:visibility="visible" />

        <TextView
            android:id="@+id/extraButtonText"
            style="@style/CustomNumberKeyboardTextLight"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:text="@string/customNumberKeyboardComma"
            android:visibility="gone"
            tools:visibility="visible" />
    </FrameLayout>

    <TextView
        android:id="@+id/number0"
        style="@style/CustomNumberKeyboardTextLight"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:text="@string/customNumberKeyboard0" />

    <ImageView
        android:id="@+id/deleteImage"
        style="@style/CustomNumberKeyboardDeleteImage"
        android:layout_width="0dp"
        android:layout_height="0dp" />
</androidx.constraintlayout.widget.ConstraintLayout>